tests/testing_data/anonymized_testing_data/invalid_data/invalid_fields/unknownImgType.dcm
version https://git-lfs.github.com/spec/v1
oid sha256:75a6de41ecffb24448ccde7cdac463cd56e4d9bd1c5600d14c665c2d77816005
size 64850
